--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name="invlap"
 version="1.0"
 authors = [
-    { name="Andreas Hackl", email="andreas.hackl@proton.me"}
+    { name="Andreas Hackl", email="andhackl@proton.me"}
 ]
 
 description="This is a fun side project to explore whether a dense neural network can solve the inverse Laplace problem for a noisy correlation function like that used in Lattice QCD."
